Fixed wrapping code blocks on iOS Safari

--- a/src/assets/stylesheets/base/_typeset.scss
+++ b/src/assets/stylesheets/base/_typeset.scss
@@ -234,6 +234,7 @@ kbd {
       box-shadow: none;
       box-decoration-break: slice;
       overflow: auto;
+      word-break: normal;
 
       // Override native scrollbar styles
       &::-webkit-scrollbar {
